--- a/css/components/container.css
+++ b/css/components/container.css
@@ -3,6 +3,7 @@
 .container {
   width: 900px auto; /* set the width of your container */
   margin: 10px auto; /* set margins: top/bottom: 40px; left/right: automatic */
+  padding: 20px 50px 20px 50px
 }
 
 .card-white{
@@ -217,7 +218,7 @@ border-bottom:1px solid white;
   display: grid;
   margin-top: 1.5rem;
   grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-  grid-gap: 20px 0px;
+  grid-gap: 20px 0pxv;
 }
 
 .skill-block {
