--- a/css/components/container.css
+++ b/css/components/container.css
@@ -6,6 +6,12 @@
   padding: 20px 50px 20px 50px
 }
 
+.container_index {
+  width: 900px auto; /* set the width of your container */
+  margin: 10px auto; /* set margins: top/bottom: 40px; left/right: automatic */
+  padding: 20px 20px 20px 20px
+}
+
 .card-white{
     background-color: white;
     padding: 20px;
@@ -218,7 +224,7 @@ border-bottom:1px solid white;
   display: grid;
   margin-top: 1.5rem;
   grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
-  grid-gap: 20px 0px;
+  grid-gap: 20px;
 }
 
 .skill-block {
