--- a/css/components/banner.css
+++ b/css/components/banner.css
@@ -2,14 +2,14 @@
 
 .banner-index {
   /* 1. Set a background image - specify image to use as a div // filter = linear-gradiant*/
-  background-image: linear-gradient(-50deg, rgba(0,0,0, 0.1) 0%, rgba(0,0,0, 0.3) 50%), url("https://images.pexels.com/photos/54278/pexels-photo-54278.jpeg?cs=srgb&dl=camper-campervan-car-54278.jpg&fm=jpg");   
+  background-image: linear-gradient(-50deg, rgba(0,0,0, 0.1) 0%, rgba(0,0,0, 0.3) 50%), url("https://images.unsplash.com/photo-1541529086526-db283c563270?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
   /* 2. Make the background image cover the banner div - cover =  will make the image cover the div */
   linear-gradient(-225deg, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0.1) 50%);
-  background-size: cover;     
+  background-size: cover;
   /* 3. Center the image - center image exactly on center of the div */
   background-position: center;
-  padding-top: 90px;
-  padding-bottom: 30px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 }
 
